--- a/shopping-list/src/app/app.component.html
+++ b/shopping-list/src/app/app.component.html
@@ -2,8 +2,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
+      <h2>Im working!</h2>
     </div>
   </div>
 </div>
+<!-- test -->
